--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "lib-flexible": "^0.3.2",
     "node-sass": "^4.12.0",
+    "postcss-px2rem": "^0.3.0",
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
     "typescript": "^3.5.2",
