--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -22,12 +23,14 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "gulp": "^4.0.2",
     "lib-flexible": "^0.3.2",
     "node-sass": "^4.12.0",
     "postcss-px2rem": "^0.3.0",
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
     "typescript": "^3.5.2",
+    "vconsole": "^3.3.2",
     "vue-template-compiler": "^2.6.10"
   }
 }
