--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build-tp": "vue-cli-service build --mode tp",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
