--- a/.env.tp
+++ b/.env.tp
@@ -1,3 +1,3 @@
-VUE_APP_TITLE = 'TP'
-VUE_APP_URL = 'http://106.13.204.73'
-NODE_ENV = 'production'
+VUE_APP_TYPE = TP
+VUE_APP_URL = http://106.13.204.73
+NODE_ENV = production
