--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-clipboard2": "^0.3.1",
     "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "web-common-library": "^1.1.7"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
