--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,48 +1,29 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
-
-# Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    branches:
+      - master
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  main:
     runs-on: ubuntu-latest
-    
-    # npm install
-    - name: npm install
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+      with:
+        persist-credentials: false
+        
+    # npm run build
+    - name: Install and Build
       run: |
-        npm install -g hexo-cli
         npm install
-      env:
-        CI: true
-    # build
-    - name: hexo build
-      run: |
-        hexo clean
-        hexo generate
-      env:
-        CI: true
-        
-        
-    # Deploy
-  - name: Deploy
-    uses: easingthemes/ssh-deploy@v2.0.7
-    env:
-      SSH_PRIVATE_KEY: ${{ secrets.ACCESS_TOKEN }}
-      ARGS: "-avz --delete"
-      SOURCE: "public/"
-      REMOTE_HOST: http://81.69.12.254
-      REMOTE_USER: root
-      TARGET: /www/wwwroot/web/engine
+        npm run build
+     
+    # react项目的FOLDER为build，vue项目改为dist   
+    - name: Deploy
+      uses: JamesIves/github-pages-deploy-action@releases/v3
+      with:
+        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        BRANCH: gh-pages
+        FOLDER: dist
+
