--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "engine",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/yucon-GitHub/engine",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
