--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,6 +24,7 @@ jobs:
         uses: hengkx/ssh-deploy@v1.0.1
         with:
           USERNAME: "root"
-          ACCESS_TOKEN: ${{ secrets.ASSESS_TOKEN }}
+          HOST: "http://81.69.12.254"
+          SSH_PRIVATE_KEY: ${{ secrets.ASSESS_TOKEN }}
           SOURCE: "dist"
           TARGET: "/www/wwwroot/web/engine"
