--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,12 +19,12 @@ jobs:
           npm install
           npm run build
 
-      # 打包
+      # 打包 SSH_PRIVATE_KEY: ${{ secrets.ASSESS_TOKEN }}
       - name: Deploy
         uses: hengkx/ssh-deploy@v1.0.1
         with:
           USERNAME: "root"
+          PASSWORD: ${{ secrets.DEPLOY_PASSWORD }}
           HOST: "http://81.69.12.254"
-          SSH_PRIVATE_KEY: ${{ secrets.ASSESS_TOKEN }}
           SOURCE: "dist"
           TARGET: "/www/wwwroot/web/engine"
