--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@master
         with:
           persist-credentials: false
 
@@ -21,7 +21,7 @@ jobs:
 
       # 打包 SSH_PRIVATE_KEY: ${{ secrets.ASSESS_TOKEN }}
       - name: Deploy
-        uses: hengkx/ssh-deploy@v1.0.1
+        uses: easingthemes/ssh-deploy@v2.0.7
         with:
           USERNAME: "root"
           PASSWORD: ${{ secrets.DEPLOY_PASSWORD }}
