--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,12 +19,12 @@ jobs:
           npm install
           npm run build
 
-      # 打包 SSH_PRIVATE_KEY: ${{ secrets.ASSESS_TOKEN }}
+      # 打包
       - name: Deploy
         uses: easingthemes/ssh-deploy@v2.0.7
         with:
-          USERNAME: "root"
-          PASSWORD: ${{ secrets.DEPLOY_PASSWORD }}
-          HOST: "http://81.69.12.254"
+          SSH_PRIVATE_KEY: ${{ secrets.ASSESS_TOKEN }}
+          REMOTE_USER: "root"
+          REMOTE_HOST: "http://81.69.12.254"
           SOURCE: "dist"
           TARGET: "/www/wwwroot/web/engine"
