--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,8 +10,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@master
-        with:
-          persist-credentials: false
+
+      - uses: srt32/git-actions@v0.0.3
+          with:
+            args: git submodule update --init --recursive
 
       # npm run build
       - name: Install and Build
