--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,27 +9,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
-
-      - uses: srt32/git-actions@v0.0.3
-        with:
-          args: git submodule update --init --recursive
-
-      # 使用 node:10
-      - name: use Node.js 10
-        uses: actions/setup-node@v1
-        with:
-          node-version: 10
+        uses: actions/checkout@master
 
       # npm run build
-      # - name: Install and Build
-      # run: |
-      # npm install
-      # npm run build
+      #      - name: Install and Build
+      #        run: |
+      #          npm install
+      #          npm run build
 
       # 打包
       - name: Deploy
-        uses: easingthemes/ssh-deploy@v2.0.7
+        uses: easingthemes/ssh-deploy@v2.1.5
         with:
           SSH_PRIVATE_KEY: ${{ secrets.ASSESS_TOKEN }}
           REMOTE_USER: "root"
