--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@master
+        uses: actions/checkout@v2
 
       # npm run build
       - name: Install
